--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   cloud_firestore: ^4.17.4
   modal_progress_hud_nsn: ^0.5.1
   url_launcher: ^6.3.0
+  fluttertoast: ^8.2.6
+  connectivity_plus: ^6.0.3
+  firebase_storage: ^11.7.7
+  shared_preferences: ^2.2.3
+  image_picker: ^1.1.2
+  cached_network_image: ^3.3.1
+  google_sign_in: ^6.2.1
   
 
 dev_dependencies:
@@ -66,7 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/images/
 
 
 
