--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^1.1.2
   cached_network_image: ^3.3.1
   google_sign_in: ^6.2.1
+  file_picker: ^8.0.5
   
 
 dev_dependencies:
